[project]
name = "grpo-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottle==0.13.2",
    "datasets>=4.1.1",
    "deepspeed==0.16.4",
    "math-verify==0.7.0",
    "safetensors==0.4.5",
    "sentencepiece==0.2.0",
    "setuptools>=80.9.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tornado==6.4.2",
    "transformers==4.49.0",
    "vllm==0.7.3",
    "wandb>=0.22.0",
]
